# node-systemd

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  package.json  tsconfig.json  tsconfig.release.json
.github/actions/publish/: action.yml
.github/workflows/: flowzone.yml
.versionbot/: CHANGELOG.yml
lib/: index.ts
src/: lib.rs
tests/: login-manager.spec.ts  service-manager.spec.ts  systemd-manager.spec.ts
tests/tools/: wait-for-it.sh
tests/tools/systemd/: Dockerfile  dbus.socket  dummy.service  entry.sh
typings/: index.node.d.ts
