[package]
name = "balena-systemd"
version = "0.3.1"
description = "Essential systemd D-Bus bindings for Node.js "
repository = "https://github.com/balena-io-modules/systemd/"
authors = ["Balena Inc. <hello@balena.io>"]
license = "Apache-2.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
once_cell = "1.18.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api"]

[profile.release]
opt-level = "z"
codegen-units = 1
